5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1573_1559.log
== TEST (2019-03-13 14:31:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper(Ada Lovelace foi a primeira programadora da história.))
-- ERROR:
File "XXXX", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da história.))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:32:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f5b67fae730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:32:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(Ada Lovelace foi a primeira programadora da história.upper())
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da história.upper())
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:41:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da história."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 20:42:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.147654
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
